--- a/manifest.json
+++ b/manifest.json
@@ -13,6 +13,12 @@
     "scripts": ["background.js"]
   },
 
-"permissions": ["notifications", "menus"]
+  "sidebar_action": {
+  "default_title": "Fire Encode",
+  "default_panel": "sidebar.html",
+  "browser_style": true
+},
+
+"permissions": ["<all_urls>", "notifications", "menus"]
 
 }
